// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBar renders two items all ok snapshot 1`] = `
<div
  className="Statusbar"
>
  <section
    className="Statusbar-panel Statusbar-errWarnPanel"
  >
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        error.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count Statusbar-errWarnPanel-count--error"
        >
          0
        </span>
         
        error
        s
      </p>
    </div>
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        warning.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count"
        >
          0
        </span>
         
        warning
        s
      </p>
    </div>
  </section>
  <section
    className="Statusbar-panel Statusbar-statusMsgPanel"
  >
    <p
      className="Statusbar-statusMsgPanel-child"
    >
      Updating vigoda…
    </p>
    <p
      className="Statusbar-statusMsgPanel-child Statusbar-statusMsgPanel-child--lastEdit"
    >
      <span
        className="Statusbar-statusMsgPanel-label"
      >
        Last Edit:
      </span>
      <span>
        vigoda ‣ main.go[+2 more]
      </span>
    </p>
  </section>
  <section
    className="Statusbar-panel Statusbar-progressPanel"
  >
    <p>
      <strong>
        0
      </strong>
      /
      2
       running
    </p>
    <svg
      className="Statusbar-logo"
    >
      logo.svg
    </svg>
  </section>
</div>
`;

exports[`StatusBar renders two items both errors snapshot 1`] = `
<div
  className="Statusbar"
>
  <section
    className="Statusbar-panel Statusbar-errWarnPanel"
  >
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon Statusbar-errWarnPanel-icon--error"
      >
        error.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count Statusbar-errWarnPanel-count--error"
        >
          2
        </span>
         
        error
        s
      </p>
    </div>
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        warning.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count"
        >
          0
        </span>
         
        warning
        s
      </p>
    </div>
  </section>
  <section
    className="Statusbar-panel Statusbar-statusMsgPanel"
  >
    <p
      className="Statusbar-statusMsgPanel-child"
    >
      Build failed: vigoda
    </p>
    <p
      className="Statusbar-statusMsgPanel-child Statusbar-statusMsgPanel-child--lastEdit"
    >
      <span
        className="Statusbar-statusMsgPanel-label"
      >
        Last Edit:
      </span>
      <span>
        vigoda ‣ main.go[+1 more]
      </span>
    </p>
  </section>
  <section
    className="Statusbar-panel Statusbar-progressPanel"
  >
    <p>
      <strong>
        0
      </strong>
      /
      2
       running
    </p>
    <svg
      className="Statusbar-logo"
    >
      logo.svg
    </svg>
  </section>
</div>
`;

exports[`StatusBar renders without crashing 1`] = `
<div
  className="Statusbar"
>
  <section
    className="Statusbar-panel Statusbar-errWarnPanel"
  >
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        error.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count Statusbar-errWarnPanel-count--error"
        >
          0
        </span>
         
        error
        s
      </p>
    </div>
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        warning.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count"
        >
          0
        </span>
         
        warning
        s
      </p>
    </div>
  </section>
  <section
    className="Statusbar-panel Statusbar-statusMsgPanel"
  >
    <p
      className="Statusbar-statusMsgPanel-child"
    >
      
    </p>
    <p
      className="Statusbar-statusMsgPanel-child Statusbar-statusMsgPanel-child--lastEdit"
    >
      <span
        className="Statusbar-statusMsgPanel-label"
      >
        Last Edit:
      </span>
      <span>
        —
      </span>
    </p>
  </section>
  <section
    className="Statusbar-panel Statusbar-progressPanel"
  >
    <p>
      <strong>
        0
      </strong>
      /
      0
       running
    </p>
    <svg
      className="Statusbar-logo"
    >
      logo.svg
    </svg>
  </section>
</div>
`;
